Add heterogenous folds

--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,9 @@
   ],
   "dependencies": {
     "purescript-prelude": "^4.1.0",
-    "purescript-console": "^4.1.0",
-    "purescript-effect": "^2.0.0",
     "purescript-record": "^1.0.0",
     "purescript-tuples": "^5.0.0",
-    "purescript-const": "^4.0.0"
+    "purescript-functors": "^3.0.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
