--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "purescript-either": "^4.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^4.0.0"
+    "purescript-psci-support": "^4.0.0",
+    "purescript-assert": "^4.0.0"
   }
 }
