--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - uses: purescript-contrib/setup-purescript@v2.0.0
       - run: |
           npx bower install
           npx pulp build
