--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-/bower_components/
 /node_modules/
-/.pulp-cache/
 /output/
 /generated-docs/
-/.psc-package/
 /.psc*
 /.purs*
 /.psa*
+/.vscode
+/.spago
